browser/themes/shared/tabbrowser/content-area.css
/* ... */
.browserSidebarContainer {
  position: absolute;
  inset: 0;
  anchor-scope: --browser-with-dialog;
}

.sidebar-browser-stack {
  flex: 1;
}

.browserStack {
  flex: 10000 10000;
  /* Prevent shrinking the page content to 0 height and width */
  min-height: 25px;
  min-width: 25px;
}

#tabbrowser-tabpanels {
  appearance: none;
  padding: 0;
  color-scheme: unset;
  display: flex;

  &[pendingpaint] {
    background-image: url("chrome://global/skin/icons/pendingpaint.png");
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 30px;
  }

  browser:is([blank], [pendingpaint]) {
    opacity: 0;
  }

  /* Exclude browsers with smartwindow-content attribute which inherit
     color-scheme from chrome to follow the browser theme */
  browser[type="content"]:not([smartwindow-content]) {
    color-scheme: env(-moz-content-preferred-color-scheme);
  }

  browser[tabDialogShowing] {
    -moz-user-focus: none !important;
    /* Used to position .dialogStack on top of this <browser> element so it doesn't overlap
       the DevTools toolbox */
    anchor-name: --browser-with-dialog;
  }

  .split-view-panel {
    --panel-min-width: 140px;
    min-width: var(--panel-min-width);
    max-width: calc(100% - var(--panel-min-width));
    flex: 1;
    width: 49.4%;
  }

  &[splitview] {
    .split-view-panel.split-view-panel-active {
      margin: var(--space-xsmall);
      position: relative;
      width: unset;
    }

    /* Ensure any dialogs are clipped in an inactive/not-selected panel. */
    :root:not([inDOMFullscreen]) & > .split-view-panel:not(.deck-selected) {
      overflow: clip;
    }

    /* Ensure split view panels can display in fullscreen mode */
    :root[inDOMFullscreen] & > .split-view-panel-active:not(.deck-selected) {
      -moz-subtree-hidden-only-visually: 1;
    }

    :root[inDOMFullscreen] & > .split-view-splitter {
      display: none;
    }

    :root[inDOMFullscreen] & > .split-view-panel-active.deck-selected {
      margin: 0;
      position: absolute;
      max-width: none;
      width: 100% !important;

      & > .browserContainer {
        border-radius: 0;
      }
    }

    .browserContainer {
      border-radius: var(--border-radius-medium);
      overflow: clip;

      /* The selected panel's dialogs need to sit above the non-selected tab panels. */
      .deck-selected > & {
        z-index: 1;
        outline: var(--focus-outline);
      }
    }

    .split-view-panel[column="0"] {
      order: 0;
      margin-inline-end: 0;

      @media not (-moz-platform: macos) {
        margin-inline-end: 2px;
      }
    }

    .split-view-splitter {
      order: 1;
      flex: none;
      -moz-user-focus: normal;
      border-color: transparent;

      &:focus-visible {
        outline: auto;
      }
    }

    .split-view-panel[column="1"] {
      order: 2;
      margin-inline-start: 0;
    }

    /* Panels with a custom width shouldn't grow. */
    .split-view-panel[width] {
      flex: none;

      @media not (prefers-reduced-motion) {
        transition: width 50ms ease-out;
      }
    }

    /* Display split view footer within inactive panels. */
    .split-view-panel:not(.deck-selected) > .browserContainer > .browserStack > split-view-footer {
      display: flex;

      &[hidden] {
        display: none;
      }
    }
  }
}

/* Split view */

split-view-footer {
  max-width: calc(100% - var(--space-xsmall));
  display: none;
  position: absolute;
  inset-block-end: 0;
  inset-inline-end: 0;

  border-block-start: 1px solid var(--border-color);
  border-inline-start: 1px solid var(--border-color);
  border-start-start-radius: var(--border-radius-medium);
  border-start-end-radius: 0;
  border-end-end-radius: var(--border-radius-medium);
  border-end-start-radius: 0;

  padding-block: var(--space-xxsmall);
  padding-inline: var(--space-small) var(--space-xsmall);

  -moz-context-properties: fill;
  fill: var(--button-icon-fill);
}

.split-view-icon {
  width: var(--icon-size);
  height: var(--icon-size);
}

.split-view-uri {
  overflow: hidden;
  text-overflow: ellipsis;
}

split-view-footer,
.split-view-security-warning {
  align-items: center;
  gap: var(--space-small);
  white-space: nowrap;
}

/* Status panel */

#statuspanel {
  &:not([hidden]) {
    max-width: calc(100% - 5px);
    pointer-events: none;

    /* Take a bit more space vertically for the mouse tracker to hit us more
     * easily */
    padding-top: 2em;

    position: absolute;
    bottom: 0;
    left: 0;
  }

  &:not([mirror]):-moz-locale-dir(rtl),
  &[mirror]:-moz-locale-dir(ltr) {
    left: auto;
    right: 0;
  }

  &[sizelimit] {
    max-width: 50%;
  }

  &[type="status"] {
    min-width: min(23em, 33%);
  }

  &[type="overLink"] {
    transition:
      opacity 120ms ease-out,
      visibility 120ms;
  }

  &:is([type="overLink"], [inactive][previoustype="overLink"]) {
    direction: ltr;
  }

  &[inactive],
  :root[inDOMFullscreen] &:not([type="overLink"]) {
    transition: none;
    opacity: 0;
    visibility: hidden;

    &[previoustype="overLink"] {
      transition:
        opacity 200ms ease-out,
        visibility 200ms;
    }
  }

  /* stylelint-disable-next-line media-query-no-invalid */
  @media -moz-pref("browser.tabs.hideStatusPanel") {
    visibility: hidden;
  }

  /* Ensure that this appears on top of the split view footer. */
  .split-view-panel & {
    z-index: 1;
  }
}

#statuspanel-label,
split-view-footer {
  color-scheme: env(-moz-content-preferred-color-scheme);
  background-color: -moz-dialog;
  border-color: ThreeDShadow;
  color: -moz-dialogText;
  text-shadow: none;

  @media (not (prefers-contrast)) and (not (-moz-platform: linux)) {
    background-color: light-dark(#f9f9fa, hsl(240, 1%, 20%));
    border-color: light-dark(#ddd, hsl(240, 1%, 40%));
    color: light-dark(#444, rgb(249, 249, 250));
  }
}
/* ... */

