Bug 2031116 - hide White space on the right side of left panel in split view r=nsharpley,desktop-theme-reviewers,tabbrowser-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D294225

UltraBlame original commit: 503638c94e618fb94531dd6ec325c4d5411de454

--- a/browser/themes/shared/tabbrowser/content-area.css
+++ b/browser/themes/shared/tabbrowser/content-area.css
@@ -218,7 +218,7 @@
       margin-inline-end: 0;
 
       @media not (-moz-platform: macos) {
-        margin-inline-end: 2px;
+        z-index: 1;
       }
     }
 
